--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -68,8 +68,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Architecture Around Manchester Photography Project </h2>
-          <p class="text-white-50">In this project, I have chosen to take a series of photographs to capture the architecture around Manchester. The photos below are temporary but reflect the style of photos I would like to take for my project.</p>
+          <h2 class="text-white mb-4">Architecture Around Manchester </h2>
+          <p class="text-white-50">In this project, I have chosen to take a series of photographs to capture the architecture around Manchester. I wanted to capture both modern and traditional buildings that can be found around Manchester as well as experimenting with various photography techniques. </p>
         </div>
       </div>
 
@@ -83,7 +83,6 @@
       <!-- Page Content -->
     <div class="container mt-5">
 
-      <!-- Page Heading -->
 
 
       <!-- Project One -->
