Changed colour of headings, added code snippet, added own images to photography portfolio

--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -88,7 +88,7 @@
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="https://source.unsplash.com/P7Rqt7H5PbA/700x400" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/sunset-reflection-media-city.jpg" alt="">
         </div>
         <div class="col-md-5">
           <h3>Photograph One</h3>
@@ -107,7 +107,7 @@
           <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
         </div>
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="https://source.unsplash.com/lv-H5A1HwPQ/700x400" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/night-at-deansgate-tram-stop.jpg" alt="">
         </div>
       </div>
       <!-- /.row -->
@@ -117,7 +117,7 @@
       <!-- Project Three -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="https://source.unsplash.com/ICqyvYjaaDs/700x400" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-cathedral-landscape.jpg" alt="">
         </div>
         <div class="col-md-5">
           <h3>Photograph Three</h3>
@@ -136,7 +136,7 @@
           <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
         </div>
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="https://source.unsplash.com/8ZauCccSdFU/700x400" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-central-library-portrait.jpg" alt="">
         </div>
       </div>
       <!-- /.row -->
@@ -146,7 +146,7 @@
       <!-- Project Five -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="https://source.unsplash.com/MhlonjDt80A/700x400" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/bbc-building-and-bridge-landscape.jpg" alt="">
         </div>
         <div class="col-md-5">
           <h3>Photograph Five</h3>
