--- a/design-evidence.html
+++ b/design-evidence.html
@@ -76,6 +76,78 @@
   <!-- Page Content -->
 <div class="container mt-5">
 
+  <!-- Full Width Image Start -->
+
+<!-- Image Section - set the background image for the header in the line below -->
+<section class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/1mTm3gH5_Wk/700x400');">
+  <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
+  <div style="height: 300px;"></div>
+</section>
+
+<!-- Content section -->
+<section class="py-5">
+  <div class="container">
+    <h1>Typography</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+  </div>
+</section>
+
+<!-- Full Width Image End -->
+
+<!-- Full Width Image Start -->
+
+<!-- Image Section - set the background image for the header in the line below -->
+<section class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/l3N9Q27zULw/700x400');">
+  <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
+  <div style="height: 300px;"></div>
+</section>
+
+<!-- Content section -->
+<section class="py-5">
+  <div class="container">
+    <h1>Colour Theory</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+  </div>
+</section>
+
+<!-- Full Width Image End -->
+
+<!-- Full Width Image Start -->
+
+<!-- Image Section - set the background image for the header in the line below -->
+<section class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/1SAnrIxw5OY/700x400');">
+  <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
+  <div style="height: 300px;"></div>
+</section>
+
+<!-- Content section -->
+<section class="py-5">
+  <div class="container">
+    <h1>Accessibility</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+  </div>
+</section>
+
+<!-- Full Width Image End -->
+
+<!-- Full Width Image Start -->
+
+
+<!-- Content section -->
+<section class="py-5">
+  <div class="container">
+    <h1>Reference List</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+  </div>
+</section>
+
+<!-- Full Width Image End -->
+
+
   <!-- Page Heading -->
 
 
