Added code snippets

--- a/video-production.html
+++ b/video-production.html
@@ -81,44 +81,47 @@
       <!-- Featured Project Row -->
 
 
-      <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="card-img-top" src="https://source.unsplash.com/CiUR8zISX60/700x400" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Video Piece One</h4>
-                <p class="mb-0 text-white-50">A short video piece created in line with a brief provided by the BBC.</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="card-img-top" src="https://source.unsplash.com/EOQhsfFBhRk/700x400" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Video Piece Two</h4>
-                <p class="mb-0 text-white-50">A short television broadcast discussing current affairs prominent at the time.</p>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+        <!-- Page Heading -->
 
+        <!-- /.row -->
+
+      </div>
+      <!-- /.container -->
+      <!-- Page Content -->
+          <div class="container">
+
+            <!-- Project One -->
+            <div class="row">
+              <div class="col-md-7">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HtKXeeAdxvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-  </section>
+              <div class="col-md-5">
+                <h3>Video Piece One - Generation Tech</h3>
+                <p>A short television broadcast discussing current affairs prominent at the time.</p>
+              </div>
+            </div>
+            <!-- /.row -->
+
+            <hr>
+
+            <!-- Project Five -->
+            <div class="row">
+
+              <div class="col-md-5">
+                <h3>Video Piece Two - MOTDx</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+              </div>
+              <div class="col-md-7">
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+              </div>
+            </div>
+            <!-- /.row -->
+
+        <hr>
+
+          </div>
+          <!-- /.container -->
 
 
   <!-- Contact Section -->
@@ -171,7 +174,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; Emily Corley 2021
     </div>
   </footer>
 
