--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         </div>
       </div>
 
+      <div class="container mt-5">
+        <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.290112972259522%2C53.45598159236581%2C-2.281894683837891%2C53.45982722307254&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=17/53.45790/-2.28600">View Larger Map</a></small>
+      </div>
+
     </div>
   </section>
 
@@ -140,7 +144,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; Emily Corley 2021
     </div>
   </footer>
 
