--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -228,7 +228,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; Emily Corley 2021
     </div>
   </footer>
 
