--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
         </div>
       </div>
 
-      <div class="container mt-5">
-        <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.290112972259522%2C53.45598159236581%2C-2.281894683837891%2C53.45982722307254&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=17/53.45790/-2.28600">View Larger Map</a></small>
-      </div>
-
+    <div class="container mt-5">
+      <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2910678386688237%2C53.45626268016216%2C-2.279094457626343%2C53.46010828541278&amp;layer=mapnik&amp;marker=53.458185526323135%2C-2.285081148147583" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.45819&amp;mlon=-2.28508#map=17/53.45819/-2.28508">View Larger Map</a></small>
+</div>
     </div>
   </section>
 
@@ -102,7 +101,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+              <i class="fas fa-map-marker-alt"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
               <div class="small text-black-50">Brian Statham Way, Old Trafford, Stretford, Manchester M16 0PU</div>
@@ -113,7 +112,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
+              <i class="fas fa-envelope"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
@@ -126,7 +125,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
+              <i class="fas fa-phone"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
               <div class="small text-black-50">07526278712</div>
