--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -77,22 +77,22 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+
     <div class="container">
 
-      <!-- Page Content -->
-    <div class="container mt-5">
 
+      <div class="container mt-5">
 
 
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/sunset-reflection-media-city.jpg" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/sunset-reflection-media-city.jpg" alt="A landscape photograph of the buildings in Media City, Salford at sunset and the view is reflected in the water.">
         </div>
         <div class="col-md-5">
           <h3>Photograph One</h3>
-          <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
+          <p><i class="fas fa-map-marker-alt"></i> MediaCityUK, Salford</p>
+          <p>This photograph of the architecture in Media City was taken during sunset.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -102,12 +102,13 @@
       <!-- Project Two -->
       <div class="row">
 
-        <div class="col-md-5">
-          <h3>Photograph Two</h3>
-          <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
-        </div>
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/night-at-deansgate-tram-stop.jpg" alt="">
+          <h3>Photograph Two</h3>
+          <p><i class="fas fa-map-marker-alt"></i> Deansgate-Castlefield Tram Stop</p>
+          <p>This photograph was taken from Deansgate-Castlefield tram stop at night, with the four towers of Deansgate Square framed by a bridge leading to Deansgate Train Station. </p>
+        </div>
+        <div class="col-md-5">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/night-at-deansgate-tram-stop.jpg" alt="A photograph taken at night of a bridge connecting Deansgate-Castlefield tram stop to Deansgate train station with the four towers of deansgate square in the background. ">
         </div>
       </div>
       <!-- /.row -->
@@ -117,11 +118,12 @@
       <!-- Project Three -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-cathedral-landscape.jpg" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-cathedral-landscape.jpg" alt="A photograph of Manchester Cathedral in the sunshine with blue sky above it.">
         </div>
         <div class="col-md-5">
           <h3>Photograph Three</h3>
-          <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
+          <p><i class="fas fa-map-marker-alt"></i> Manchester Cathedral</p>
+          <p>This is a photograph of Manchester Cathedral in the sunshine. </p>
         </div>
       </div>
       <!-- /.row -->
@@ -131,12 +133,13 @@
       <!-- Project Four -->
       <div class="row">
 
-        <div class="col-md-5">
-          <h3>Photograph Four</h3>
-          <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
-        </div>
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-central-library-portrait.jpg" alt="">
+          <h3>Photograph Four</h3>
+          <p><i class="fas fa-map-marker-alt"></i> Manchester Central Library</p>
+          <p>This photograph was taken from Library Walk, which is located between the Manchester Central Library and Town Hall.</p>
+        </div>
+        <div class="col-md-5">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-central-library-portrait.jpg" alt="A photograph of Manchester Cental Library and town hall with blue sky above. ">
         </div>
       </div>
       <!-- /.row -->
@@ -146,11 +149,12 @@
       <!-- Project Five -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/bbc-building-and-bridge-landscape.jpg" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/bbc-building-and-bridge-landscape.jpg" alt="The BBC building and the Media City footbridge during golden hour.">
         </div>
         <div class="col-md-5">
           <h3>Photograph Five</h3>
-          <p>Here I will include a breif description of the photograph and the location where the photograph was taken.</p>
+          <p><i class="fas fa-map-marker-alt"></i> Media City UK,Salford</p>
+          <p>This photograph of the BBC building was taken in Media City UK,Salford during golden hour.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -187,7 +191,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+            <i class="fas fa-map-marker-alt"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
               <div class="small text-black-50">Brian Statham Way, Old Trafford, Stretford, Manchester M16 0PU</div>
@@ -198,7 +202,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
+              <i class="fas fa-envelope"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
@@ -211,7 +215,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
+              <i class="fas fa-phone"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
               <div class="small text-black-50">07526278712</div>
