--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -152,7 +152,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+            <i class="fas fa-map-marker-alt"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
               <div class="small text-black-50">Brian Statham Way, Old Trafford, Stretford, Manchester M16 0PU</div>
@@ -163,7 +163,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
+            <i class="fas fa-envelope"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
@@ -176,7 +176,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                <i class="fas fa-phone"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
               <div class="small text-black-50">07526278712</div>
