--- a/video-production.html
+++ b/video-production.html
@@ -74,16 +74,13 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
-    <div class="container">
 
       <!-- Featured Project Row -->
 
 
 
         <!-- Page Heading -->
-
+  <div class="container mt-5">
         <!-- /.row -->
 
       </div>
@@ -97,7 +94,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/HtKXeeAdxvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
               <div class="col-md-5">
-                <h3>Video Piece One - Generation Tech</h3>
+                <h3><i class="fas fa-photo-video"></i> Generation Tech</h3>
                 <p>A short television broadcast discussing current affairs prominent at the time.</p>
               </div>
             </div>
@@ -109,7 +106,7 @@
             <div class="row">
 
               <div class="col-md-5">
-                <h3>Video Piece Two - MOTDx</h3>
+                <h3><i class="fas fa-photo-video"></i> MOTDx</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
               </div>
               <div class="col-md-7">
@@ -133,7 +130,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+            <i class="fas fa-map-marker-alt"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
               <div class="small text-black-50">Brian Statham Way, Old Trafford, Stretford, Manchester M16 0PU</div>
@@ -144,7 +141,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
+              <i class="fas fa-envelope"></i>
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
@@ -157,7 +154,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                <i class="fas fa-phone"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
               <div class="small text-black-50">07526278712</div>
