--- a/video-production.html
+++ b/video-production.html
@@ -107,7 +107,7 @@
 
               <div class="col-md-5">
                 <h3><i class="fas fa-photo-video"></i> MOTDx</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+                <p>A short video piece made in line with a brief given by the BBC, with the intention of it being broadcast on MOTDx.</p>
               </div>
               <div class="col-md-7">
                   <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
