--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Home Page - Emily Corley</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,9 @@
       </div>
 
     <div class="container mt-5">
-      <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2910678386688237%2C53.45626268016216%2C-2.279094457626343%2C53.46010828541278&amp;layer=mapnik&amp;marker=53.458185526323135%2C-2.285081148147583" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=53.45819&amp;mlon=-2.28508#map=17/53.45819/-2.28508">View Larger Map</a></small>
+      <object data="https://www.openstreetmap.org/export/embed.html?bbox=-2.2910678386688237%2C53.45626268016216%2C-2.279094457626343%2C53.46010828541278&amp;layer=mapnik&amp;marker=53.458185526323135%2C-2.285081148147583
+" border="1" width="100%" height="350">
+</object>
 </div>
     </div>
   </section>
