--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Photography Portfolio - Emily Corley</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -118,12 +118,12 @@
       <!-- Project Three -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-cathedral-central.jpg" alt="A photograph of Manchester Cathedral in the sunshine with blue sky above it.">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/long-exposure-library-tram.jpg" alt="A long exposure photograph of a tram going past the Manchester Central Library causing a blurring effect.">
         </div>
         <div class="col-md-5">
           <h3>Photograph Three</h3>
-          <p><i class="fas fa-map-marker-alt"></i> Manchester Cathedral</p>
-          <p>This is a photograph of Manchester Cathedral in the sunshine. </p>
+          <p><i class="fas fa-map-marker-alt"></i> Manchester Central Library</p>
+          <p>This is a long exposure photograph of a tram going past Manchester Central Library. </p>
         </div>
       </div>
       <!-- /.row -->
@@ -135,11 +135,11 @@
 
         <div class="col-md-7">
           <h3>Photograph Four</h3>
-          <p><i class="fas fa-map-marker-alt"></i> Manchester Central Library</p>
-          <p>This photograph was taken from Library Walk, which is located between the Manchester Central Library and Town Hall.</p>
+          <p><i class="fas fa-map-marker-alt"></i> Manchester Cathedral</p>
+          <p>This is a low and wide angle photograph of Manchester Cathedral.</p>
         </div>
         <div class="col-md-5">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/manchester-central-library-portrait.jpg" alt="A photograph of Manchester Cental Library and town hall with blue sky above. ">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/low-wide-angle-cathedral.jpg" alt="This is a low and wide angle photograph of Manchester Catherdral. ">
         </div>
       </div>
       <!-- /.row -->
