Added carousel code snippet, changed code snippet in evidence sections. Added text

--- a/design-evidence.html
+++ b/design-evidence.html
@@ -74,74 +74,122 @@
   </section>
 
   <!-- Page Content -->
-<div class="container mt-5">
+  <div class="container mt-5">
 
+    <!-- Page Heading -->
+    <h1 class="my-4">Code Snippet
+      <small>Two Column</small>
+    </h1>
 
-  <!-- Page Heading -->
-
-
-  <div class="row">
-    <div class="col-lg-4 col-sm-6 mb-4">
-      <div class="card h-100">
-        <img class="card-img-top" src="https://source.unsplash.com/1mTm3gH5_Wk/700x400" alt="">
-        <div class="card-body">
-          <h4 class="card-title">
-            Reasoning Behind Font Choice - Typography
-          </h4>
-          <p class="card-text">Throughout my website I have chosen to use the font 'Fira Sans Condensed', the reason for this is because it is important for a website to feel coherent throughout and I wanted to use a font that would reflect professionalism as the intended target audience of the website is media professionals who could offer career oppourtunitues in the media industry. Therefore, this font seemed like the best fit as it is simplistic, easy to read and appears professional.  </p>
+    <div class="row">
+      <div class="col-lg-6 mb-4">
+        <div class="card h-100">
+        <img class="card-img-top" src="https://source.unsplash.com/1mTm3gH5_Wk/700x400" alt="A photo of letter stamps spelling out the word 'typography'">
+          <div class="card-body">
+            <h4 class="card-title">
+              Typography
+            </h4>
+            <p class="card-text">I made the decision to use the font ‘Fira Sans Condensed’ consistently throughout my website. The reason why I chose this font is because sans serif fonts are easy to read and are considered modern, minimalistic and are good to use for titles (Pack,2017). I also think that the font appears professional, and this was important because the intended audience for this website is media professionals who could potentially offer career opportunities in the media industry. The choice to only use one font throughout the website was made because having too many fonts can be distracting and be seen as unprofessional (Arhipova, 2017). I made headings and subheadings larger and bolder than main body text to establish a strong visual hierarchy (Graham, 2012). Having a clear typographic hierarchy makes text legible, easy to scan and draws in the attention of users (Arhipova,2017).</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4">
-      <div class="card h-100">
-        <img class="card-img-top" src="https://source.unsplash.com/l3N9Q27zULw/700x400" alt="">
-        <div class="card-body">
-          <h4 class="card-title">
-            Process of Chosing The Colour Scheme - Colour Theory
-          </h4>
-          <p class="card-text">Throughout my website I have included light blue accents. I chose this colour because after researhing the colour theory it became evident that the colour blue is often used to represent calmness and responsibility which are both attributes I wish to portray through this website. </p>
+
+      <div class="col-lg-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="https://source.unsplash.com/l3N9Q27zULw/700x400" alt="A photograph of coloured pencils">
+          <div class="card-body">
+            <h4 class="card-title">
+              Colour Theory
+            </h4>
+            <p class="card-text">At the start of the design process, I decided to create a blue colour scheme throughout my website. I chose this colour as research shows that the colour blue is perceived as aesthetically appealing and often associated with trust (Cyr et al, 2010). When I began to pull in my own images to my website it became clear that blue headings were hard to read against the photo I had chosen as my header photo. Therefore, I decided to include another colour simply for headings and use blue everywhere else. I wanted the colours to work well together, so I chose a colour which is opposite blue in the colour wheel, which is orange (Holtzschue, 2012). This is known as a complementary colour pair (Itten, 1970) and when used together they are meant to contrast and complement each other well.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4">
-      <div class="card h-100">
-        <img class="card-img-top" src="https://source.unsplash.com/1SAnrIxw5OY/700x400" alt="">
-        <div class="card-body">
-          <h4 class="card-title">
-          Accessibility
-          </h4>
-          <p class="card-text">In this section I will discuss accessibility.</p>
+      <div class="col-lg-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="https://source.unsplash.com/1SAnrIxw5OY/700x400" alt="A photograph of a laptop on a desk">
+          <div class="card-body">
+            <h4 class="card-title">
+              Accessibility
+            </h4>
+            <p class="card-text">Website accessibility ensures that websites are available for everyone of all different abilities to use and experience (Dudharejia,2020). A few ways in which websites can be made more accessible is by including alternative text, simplistic language, a good colour contrast and clear typography (Brophy and Craven, 2007). Alternative text is used within HTML to describe an image, this benefits people who are visual impaired, but it could also benefit those who may be in a situation where images on a website won’t load. In order to ensure the language used on my website was easy to read and understand, I used the website Hemmingway Editor to improve the readability of my text (See the supporting evidence section). Whilst creating my website I observed that the blue headings were hard to read against the header image I chose to use, therefore I needed to find an alternative colour to use as it is important to have a good colour contrast. This is beneficial for those who may have limited vision but also those who may be looking at the website outside or in direct sunlight. Finally, typography also plays a part in making a website accessible because it is important that any text is easily legible to users. I chose to just include one font because having to many fonts on one website can make it much harder to read and understand, which hinders the experience that users will have on the website.   </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-4 col-sm-6 mb-4">
-      <div class="card h-100">
+      <div class="col-lg-6 mb-4">
+        <div class="card h-100">
 
-        <div class="card-body">
-          <h4 class="card-title">
-            Reference List
-          </h4>
-          <p class="card-text">In this section I will reference any sources that I have used to assisted my responses in the above sections.</p>
+          <div class="card-body">
+            <h4 class="card-title">
+              Reference List
+            </h4>
+            <p class="card-text">Arhipova, A., (2017). 8 Typography Tips For Designers: How to Make Fonts Speak. [online] Tubik Blog: Articles About Design. Available at: <https://blog.tubikstudio.com/8-typography-tips-for-designers-how-to-make-fonts-speak/> [Accessed 11 April 2021].</p>
+            <p class="card-text">Brophy, P. and Craven, J., (2007). Web accessibility. Library trends, 55(4), pp.950-972.</p>
+            <p class="card-text">Cyr, D., Head, M. and Larios, H., (2010). Colour appeal in website design within and across cultures: A multi-method evaluation. International journal of human-computer studies, 68(1-2), pp.1-21.</p>
+            <p class="card-text">Dudharejia, M., (2020). How to Incorporate Accessibility in Your Website. [online] Search Engine Journal. Available at: <https://www.searchenginejournal.com/make-website-more-accessible/347450/#close> [Accessed 10 April 2021].</p>
+            <p class="card-text">Graham, L. (2012). Basics of design: Layout & Typography for beginners. Cengage Learning.</p>
+            <p class="card-text">Holtzschue, L., (2012). Understanding color: an introduction for designers. John Wiley & Sons.</p>
+            <p class="card-text">Itten, J., (1970). The elements of color (Vol. 4). John Wiley & Sons.</p>
+            <p class="card-text">Pack, P. (2017) A Visual Guide to Typography. Available at https://www.canva.com/learn/visual-glossary-typographic-terms/ [Accessed 10 April 2021].</p>
+
+          </div>
         </div>
       </div>
+
+
+
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- START THE CAROUSEL -->
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <!-- Slide One - Set the background image for this slide in the line below -->
+    <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+      <div class="carousel-caption d-none d-md-block">
+        <h2 class="display-4">Colour Tool</h2>
+        <p class="lead">This is a description for the first slide.</p>
+      </div>
     </div>
+    <!-- Slide Two - Set the background image for this slide in the line below -->
+    <div class="carousel-item" style="background-image: url('https://source.unsplash.com/bF2vsubyHcQ/1920x1080')">
+      <div class="carousel-caption d-none d-md-block">
+        <h2 class="display-4">Second Slide</h2>
+        <p class="lead">This is a description for the second slide.</p>
+      </div>
+    </div>
+    <!-- Slide Three - Set the background image for this slide in the line below -->
+    <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
+      <div class="carousel-caption d-none d-md-block">
+        <h2 class="display-4">Third Slide</h2>
+        <p class="lead">This is a description for the third slide.</p>
+      </div>
+    </div>
+  </div>
 
-  <!-- /.row -->
-
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
 </div>
-<!-- /.container -->
 
-  <!-- Projects Section -->
+<!-- END THE CAROUSEL -->
 
-      <!-- Project One Row -->
-
-
-      <!-- Project Two Row -->
-
-
-    </div>
+  </div>
   </section>
-
+  
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">
