--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Architecture Around Manchester </h2>
-          <p class="text-white-50">In this project, I have chosen to take a series of photographs to capture the architecture around Manchester. I wanted to capture both modern and traditional buildings that can be found around Manchester as well as experimenting with various photography techniques. </p>
+          <p class="text-white-50">In this project, I have chosen to take a series of photographs to capture the architecture around Manchester. I wanted to capture both modern and traditional buildings as well as experimenting with various photography techniques. </p>
         </div>
       </div>
 
