--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -74,69 +74,62 @@
   </section>
 
   <!-- Page Content -->
-  <div class="container mt-5">
+<div class="container mt-5">
 
-    <!-- Page Heading -->
+  <!-- Page Heading -->
+  <h1 class="my-4">Code Snippet
+    <small>Two Column</small>
+  </h1>
 
-    <div class="row">
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="https://source.unsplash.com/snmtni2z6Qw/700x400" alt="">
-          <div class="card-body">
-            <h4 class="card-title">
-              Photography Basics
-            </h4>
-            <p class="card-text">There are many factors that need to be considered to create a good photograph. Some of these factors include: lighting, angles, framing and focus. </p>
-          </div>
+  <div class="row">
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+      <img class="card-img-top" src="https://source.unsplash.com/snmtni2z6Qw/700x400" alt="A photograph of a someone holding a camera in their hand">
+        <div class="card-body">
+          <h4 class="card-title">
+            Photography Basics
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="https://source.unsplash.com/JkHT9lhBfNw/700x400
-" alt="">
-          <div class="card-body">
-            <h4 class="card-title">
-              Video Production Basics
-            </h4>
-            <p class="card-text">In this section I will include the basics of video production.</p>
-          </div>
+    </div>
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="https://source.unsplash.com/JkHT9lhBfNw/700x400" alt="A photograph of a video production camera">
+        <div class="card-body">
+          <h4 class="card-title">
+            Video Production Basics
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="https://source.unsplash.com/UfseYCHvIH0/700x400" alt="">
-          <div class="card-body">
-            <h4 class="card-title">
-              Social Media Delivery Formats
-            </h4>
-            <p class="card-text">In this section I will discuss the different formats of social media delivery.</p>
-          </div>
+    </div>
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="https://source.unsplash.com/UfseYCHvIH0/700x400" alt="A photograph of someone holding a phone with the YouTube logo displayed on the screen">
+        <div class="card-body">
+          <h4 class="card-title">
+            Social Delivery Formats
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card h-100">
+    </div>
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
 
-          <div class="card-body">
-            <h4 class="card-title">
-              Refernce List
-            </h4>
-            <p class="card-text">In this section I will reference any sources that have aided my reasoning in the above sections.</p>
-          </div>
+        <div class="card-body">
+          <h4 class="card-title">
+            Refernce List
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
       </div>
+    </div>
+  <!-- /.row -->
 
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-  <!-- Projects Section -->
-
-
-
-      <!-- Project One Row -->
-
-
-      <!-- Project Two Row -->
+</div>
+<!-- /.container -->
 
 
     </div>
