Changed text in About Me Section, embeded MOTDx clip

--- a/design-evidence.html
+++ b/design-evidence.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="text-white-50">Here I will discuss and explain the reasonings behind the choices I have made and the tools I have used to create this website.</p>
+          <p class="text-white-50">The below sections will explain the choices made throughout the process of designing and creating this website, and how those choices were made. </p>
         </div>
       </div>
     </div>
@@ -77,9 +77,6 @@
   <div class="container mt-5">
 
     <!-- Page Heading -->
-    <h1 class="my-4">Code Snippet
-      <small>Two Column</small>
-    </h1>
 
     <div class="row">
       <div class="col-lg-6 mb-4">
@@ -112,7 +109,7 @@
             <h4 class="card-title">
               Accessibility
             </h4>
-            <p class="card-text">Website accessibility ensures that websites are available for everyone of all different abilities to use and experience (Dudharejia,2020). A few ways in which websites can be made more accessible is by including alternative text, simplistic language, a good colour contrast and clear typography (Brophy and Craven, 2007). Alternative text is used within HTML to describe an image, this benefits people who are visual impaired, but it could also benefit those who may be in a situation where images on a website won’t load. In order to ensure the language used on my website was easy to read and understand, I used the website Hemmingway Editor to improve the readability of my text (See the supporting evidence section). Whilst creating my website I observed that the blue headings were hard to read against the header image I chose to use, therefore I needed to find an alternative colour to use as it is important to have a good colour contrast. This is beneficial for those who may have limited vision but also those who may be looking at the website outside or in direct sunlight. Finally, typography also plays a part in making a website accessible because it is important that any text is easily legible to users. I chose to just include one font because having to many fonts on one website can make it much harder to read and understand, which hinders the experience that users will have on the website.   </p>
+            <p class="card-text">Website accessibility ensures that websites are available for everyone of all different abilities to use and experience (Dudharejia,2020). A few ways in which websites can be made more accessible is by including alternative text, simplistic language, a good colour contrast and clear typography (Brophy and Craven, 2007). Alternative text is used within HTML to describe an image, this benefits people who are visual impaired, but it could also benefit those who may be in a situation where images on a website won’t load. In order to ensure the language used on my website was easy to read and understand, I used the website Hemmingway Editor to improve the readability of my text (See the supporting evidence section below). Whilst creating my website I observed that the blue headings were hard to read against the header image I chose to use, therefore I needed to find an alternative colour to use as it is important to have a good colour contrast. This is beneficial for those who may have limited vision but also those who may be looking at the website outside or in direct sunlight. Finally, typography also plays a part in making a website accessible because it is important that any text is easily legible to users. I chose to just include one font because having to many fonts on one website can make it much harder to read and understand, which hinders the experience that users will have on the website.   </p>
           </div>
         </div>
       </div>
@@ -127,7 +124,6 @@
             <p class="card-text">Brophy, P. and Craven, J., (2007). Web accessibility. Library trends, 55(4), pp.950-972.</p>
             <p class="card-text">Cyr, D., Head, M. and Larios, H., (2010). Colour appeal in website design within and across cultures: A multi-method evaluation. International journal of human-computer studies, 68(1-2), pp.1-21.</p>
             <p class="card-text">Dudharejia, M., (2020). How to Incorporate Accessibility in Your Website. [online] Search Engine Journal. Available at: <https://www.searchenginejournal.com/make-website-more-accessible/347450/#close> [Accessed 10 April 2021].</p>
-            <p class="card-text">Graham, L. (2012). Basics of design: Layout & Typography for beginners. Cengage Learning.</p>
             <p class="card-text">Holtzschue, L., (2012). Understanding color: an introduction for designers. John Wiley & Sons.</p>
             <p class="card-text">Itten, J., (1970). The elements of color (Vol. 4). John Wiley & Sons.</p>
             <p class="card-text">Pack, P. (2017) A Visual Guide to Typography. Available at https://www.canva.com/learn/visual-glossary-typographic-terms/ [Accessed 10 April 2021].</p>
@@ -142,6 +138,8 @@
 
   </div>
   <!-- /.container -->
+  <h1 class="my-4">Supporting Evidence
+  </h1>
 
   <!-- START THE CAROUSEL -->
 
@@ -153,24 +151,18 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <!-- Slide One - Set the background image for this slide in the line below -->
-    <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+    <div class="carousel-item active" style="background-image: url('img/colour-tool-screenshot.jpg')">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="display-4">Colour Tool</h2>
-        <p class="lead">This is a description for the first slide.</p>
       </div>
     </div>
     <!-- Slide Two - Set the background image for this slide in the line below -->
-    <div class="carousel-item" style="background-image: url('https://source.unsplash.com/bF2vsubyHcQ/1920x1080')">
+    <div class="carousel-item" style="background-image: url('img/hemmingway-screenshot-before.jpg')">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="display-4">Second Slide</h2>
-        <p class="lead">This is a description for the second slide.</p>
       </div>
     </div>
     <!-- Slide Three - Set the background image for this slide in the line below -->
-    <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
+    <div class="carousel-item" style="background-image: url('img/hemmingway-screenshot-after.jpg')">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="display-4">Third Slide</h2>
-        <p class="lead">This is a description for the third slide.</p>
       </div>
     </div>
   </div>
@@ -189,7 +181,7 @@
 
   </div>
   </section>
-  
+
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">
