--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About Me</h2>
-          <p class="text-white-50">I am a University student currently studying Media and Communications at University Academy 92 in Manchester. I previously studied Media Studies at A Level where I developed a passion for photography and photo editing. This website will act as a portfolio, where I will showcase all of the media production work that I create during my time at University Academy 92. </p>
+          <p class="text-white-50">I am currently studying Media and Communications at University Academy 92 in Manchester. I studied Media Studies at A Level, where I developed a passion for photography and photo editing. This website will act as a portfolio, where I will showcase all of the media production work that I create. </p>
         </div>
       </div>
 
@@ -80,18 +80,6 @@
 </div>
     </div>
   </section>
-
-  <!-- Projects Section -->
-
-
-      <!-- Featured Project Row -->
-
-
-      <!-- Project One Row -->
-
-
-      <!-- Project Two Row -->
-
 
 
   <!-- Contact Section -->
