--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -136,7 +136,7 @@
         <div class="col-md-7">
           <h3>Photograph Four</h3>
           <p><i class="fas fa-map-marker-alt"></i> Manchester Cathedral</p>
-          <p>This is a low and wide angle photograph of Manchester Cathedral.</p>
+          <p>This is a low, wide angle photograph of Manchester Cathedral.</p>
         </div>
         <div class="col-md-5">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/low-wide-angle-cathedral.jpg" alt="This is a low and wide angle photograph of Manchester Catherdral. ">
