--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="text-white-50">Here I will discuss and explain the decisions made throughout the process of producing a series of 5 photos as well as the video piece. As well as the skills that I have put into practice throughout the process.</p>
+          <p class="text-white-50">The below sections explain the decisions I made during the media production process. As well as the skills and techniques that I have put into practice.</p>
         </div>
       </div>
     </div>
@@ -76,15 +76,11 @@
   <!-- Page Content -->
 <div class="container mt-5">
 
-  <!-- Page Heading -->
-  <h1 class="my-4">Code Snippet
-    <small>Two Column</small>
-  </h1>
 
   <div class="row">
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-      <img class="card-img-top" src="https://source.unsplash.com/snmtni2z6Qw/700x400" alt="A photograph of a someone holding a camera in their hand">
+      <img class="card-img-top" src="https://source.unsplash.com/snmtni2z6Qw/700x400" alt="A photograph of a someone holding a camera in their hand.">
         <div class="card-body">
           <h4 class="card-title">
             Photography Basics
@@ -106,7 +102,7 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <img class="card-img-top" src="https://source.unsplash.com/UfseYCHvIH0/700x400" alt="A photograph of someone holding a phone with the YouTube logo displayed on the screen">
+        <img class="card-img-top" src="https://source.unsplash.com/UfseYCHvIH0/700x400" alt="A photograph of someone holding a phone with the YouTube logo displayed.">
         <div class="card-body">
           <h4 class="card-title">
             Social Delivery Formats
@@ -120,7 +116,7 @@
 
         <div class="card-body">
           <h4 class="card-title">
-            Refernce List
+            Reference List
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
@@ -130,7 +126,6 @@
 
 </div>
 <!-- /.container -->
-
 
     </div>
   </section>
