--- a/video-production.html
+++ b/video-production.html
@@ -110,7 +110,19 @@
                 <p>A short video piece made in line with a brief given by the BBC, with the intention of it being broadcast on MOTDx.</p>
               </div>
               <div class="col-md-7">
-                  <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5z4NzOljuy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+            <!-- /.row -->
+                <hr>
+            <!-- Project One -->
+            <div class="row">
+              <div class="col-md-7">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HtKXeeAdxvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+              <div class="col-md-5">
+                <h3><i class="fas fa-photo-video"></i> MOTDx Social Media Clip</h3>
+                <p>A shorter version of our MOTDx clip intended to be used on social media.</p>
               </div>
             </div>
             <!-- /.row -->
