Updated Text in evidence section, Changed colour of arrows in carousel snippet, embedded social media clip

--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -92,7 +92,7 @@
         <div class="col-md-5">
           <h3>Photograph One</h3>
           <p><i class="fas fa-map-marker-alt"></i> MediaCityUK, Salford</p>
-          <p>This photograph of the architecture in Media City was taken during sunset.</p>
+          <p>This photograph of the architecture in Media City was taken during sunset. I positioned the camera lower down that you usually would in order to get the symmetrical reflection in the water.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -105,7 +105,7 @@
         <div class="col-md-7">
           <h3>Photograph Two</h3>
           <p><i class="fas fa-map-marker-alt"></i> Deansgate-Castlefield Tram Stop</p>
-          <p>This photograph was taken from Deansgate-Castlefield tram stop at night, with the four towers of Deansgate Square framed by a bridge leading to Deansgate Train Station. </p>
+          <p>This photograph was taken from Deansgate-Castlefield tram stop at night, with the four towers of Deansgate Square framed by the arch of a bridge leading to Deansgate Train Station. This is an example of the photography technique frame within a frame  </p>
         </div>
         <div class="col-md-5">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/night-at-deansgate-tram-stop.jpg" alt="A photograph taken at night of a bridge connecting Deansgate-Castlefield tram stop to Deansgate train station with the four towers of deansgate square in the background. ">
@@ -123,7 +123,7 @@
         <div class="col-md-5">
           <h3>Photograph Three</h3>
           <p><i class="fas fa-map-marker-alt"></i> Manchester Central Library</p>
-          <p>This is a long exposure photograph of a tram going past Manchester Central Library. </p>
+          <p>This is a long exposure photograph of a tram going past Manchester Central Library. I acheived this effect by setting my shutter speed to 1/4 which allows more light to enter the camera and create a motion blur effect. </p>
         </div>
       </div>
       <!-- /.row -->
@@ -136,7 +136,7 @@
         <div class="col-md-7">
           <h3>Photograph Four</h3>
           <p><i class="fas fa-map-marker-alt"></i> Manchester Cathedral</p>
-          <p>This is a low, wide angle photograph of Manchester Cathedral.</p>
+          <p>This is a  photograph of Manchester Cathedral which was taking from a low angle looking upwards using a wide angle camera lens.</p>
         </div>
         <div class="col-md-5">
             <img class="img-fluid rounded mb-3 mb-md-0" src="img/low-wide-angle-cathedral.jpg" alt="This is a low and wide angle photograph of Manchester Catherdral. ">
@@ -154,7 +154,7 @@
         <div class="col-md-5">
           <h3>Photograph Five</h3>
           <p><i class="fas fa-map-marker-alt"></i> Media City UK,Salford</p>
-          <p>This photograph of the BBC building was taken in Media City UK,Salford during golden hour.</p>
+          <p>This photograph of the BBC building was taken in Media City UK,Salford during golden hour. In this photo I tried to adhere to the rule of thirds to ensure there wasn't too much dead space.</p>
         </div>
       </div>
       <!-- /.row -->
