--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -85,7 +85,7 @@
           <h4 class="card-title">
             Photography Basics
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text">To take my photographs, I decided to use an iPhone 12 pro, because it is accessible, portable, easy to be inconspicuous and still produces high quality images. When taking photos, you have to consider lighting, framing and ensure you have an interesting subject matter (Cox, 2019). In this project I experimented with using reflections of water to create an image. Using reflections when taking photos can completely alter what would be a relatively straightforward image into something richer (Rodrigues, 2008). I also demonstrated the technique of framing within a frame, where you use a visual element within an image to frame a primary subject (Rowland,2018). I used the arch of a bridge to frame buildings in the distance. I practiced using the technique of long exposure, which I achieved by setting my shutter speed to ¼. This allowed more light to enter the camera and created a motion blur effect. I also experimented with using a wide-angle lens. I chose to use this as it adds more depth to a photo and paired with taking the photo from a low angle it created an intimidating effect. Finally, my last photo was taken during golden hour which is the best time of day to take photos and I tried to adhere to the rule of thirds so there wasn’t too much dead space.</p>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
           <h4 class="card-title">
             Video Production Basics
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text">There are four stages of video production: developing a story, translating the story into the language of motion picture, recording the material and editing (Diefenbach, 2009). So, to begin the process we had to decide what topic we wanted to cover, then we had to decide what type of shots we wanted to use to translate the chosen topic effectively. When it came to the recording of content setting up the equipment correctly was vitally important, this including setting up the camera on the tripod ensuring it was level, using the spirit level guide, so our shots would be level. Adjusting the white balance, ND (neutral density) filter and brightness settings accordingly to the lighting, as we shot both indoors and outdoors. We made sure the framing of the shot was following the rule of thirds by using the grid function on the camera. It is also just as important to just the audio levels before and throughout filming to make sure the volume is sufficient and there is no distortion or interference with the mic. We also overshot a lot of our footage which is helpful in the editing process as there are more shots to choose from.</p>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@
           <h4 class="card-title">
             Social Delivery Formats
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text">We have made our MOTDx package available to watch on Youtube and this is because the platform is heavily used and easily accessible. For our social media piece, we decided to display it in the form of an Instagram post, due to the fact that Instagram is also a heavily used platform, especially by the intended audience of MOTDx. The programme’s target audience is people of the younger generation who are interested in football, music and culture from around the premier league (BBC, 2021). To make the video suitable to be posted on Instagram we had to change the format of the video, which included changing the aspect ratio, as the app uses a square, 1:1 aspect ratio format and a maximum of 1080x1080 resolution (Radice,2019) for its content. But because our original piece was created with the intention of it being part of a television broadcast it was shot in a widescreen landscape format of 16:9 and in 1920 x 1080 resolution (Schubin, 1996). We made the clip roughly 20 seconds long due to the attention span of Instagram users so it is vital to capture users attention and prevent them from scrolling. We tried to achieve this by including most stand out moments in our original post. </p>
         </div>
       </div>
     </div>
@@ -118,7 +118,13 @@
           <h4 class="card-title">
             Reference List
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text">BBC (2021). BBC Three - MOTDx. [online] Available at: <https://www.bbc.co.uk/programmes/m0008jyj> [Accessed 15 April 2021].</p>
+          <p class="card-text">Cox, S., (2019). What Makes a Good Photo?. [online] Photography Life. Available at: <https://photographylife.com/what-makes-a-good-photo> [Accessed 13 April 2021].</p>
+          <p class="card-text">Diefenbach, D.L., (2009). Video production techniques: Theory and practice from concept to screen. Routledge.</p>
+          <p class="card-text">Radice, R., (2019). 2019 Guide to All Required Instagram Video Sizes and Dimensions. [online] Pinterest and Instagram Marketing Tips and News. Available at: <https://www.tailwindapp.com/blog/required-instagram-video-sizes-and-dimensions> [Accessed 14 April 2021].</p>
+          <p class="card-text">Rodrigues, V., (2008). 50 Stunning Examples Of Reflection Photography — Smashing Magazine. [online] Smashing Magazine. Available at: <https://www.smashingmagazine.com/2008/11/50-beautiful-examples-of-reflections-photography/#:~:text=The%20wonderful%20thing%20about%20using,amazing%20effects%20and%20beautiful%20images.> [Accessed 13 April 2021].</p>
+          <p class="card-text">Rowland, G.,( 2018). A Frame within a Frame: A useful composition technique in photography. — Geraint Rowland Photography. [online] Geraint Rowland Photography. Available at: <https://www.geraintrowland.co.uk/blog/2018/3/21/a-frame-within-frame-a-useful-composition-technique-in-photography#:~:text=What%20is%20a%20'Frame%20within,a%20frame%20within%20a%20frame.> [Accessed 13 April 2021]. </p>
+          <p class="card-text">Schubin, M., (1996). Searching for the perfect aspect ratio. SMPTE journal, 105(8), pp.460-478.</p>
         </div>
       </div>
     </div>
