--- a/design-evidence.html
+++ b/design-evidence.html
@@ -86,7 +86,7 @@
             <h4 class="card-title">
               Typography
             </h4>
-            <p class="card-text">I made the decision to use the font ‘Fira Sans Condensed’ consistently throughout my website. The reason why I chose this font is because sans serif fonts are easy to read and are considered modern, minimalistic and are good to use for titles (Pack,2017). I also think that the font appears professional, and this was important because the intended audience for this website is media professionals who could potentially offer career opportunities in the media industry. The choice to only use one font throughout the website was made because having too many fonts can be distracting and be seen as unprofessional (Arhipova, 2017). I made headings and subheadings larger and bolder than main body text to establish a strong visual hierarchy (Graham, 2012). Having a clear typographic hierarchy makes text legible, easy to scan and draws in the attention of users (Arhipova,2017).</p>
+            <p class="card-text">I made the decision to use the font ‘Fira Sans Condensed’ consistently throughout my website. The reason why I chose this font is because sans serif fonts are considered modern, minimalistic and are good to use for titles (Pack,2017). I also think that the font appears professional, this was important because the intended audience for this website is media professionals who could potentially offer career opportunities in the media industry. Sans serif fonts are also extremely legible and practical for any purpose (Beaird et al,2020), this was important as I only wanted to use one font throughout my website so wanted it to practical for every purpose. The choice to only use one font throughout my website was made because having too many fonts can be distracting and be seen as unprofessional (Arhipova, 2017). Having a clear typographic hierarchy makes text legible, easy to scan and draws in the attention of users (Arhipova,2017). To achieve a clear typographic hierarchy made the font size of the headings and subheadings larger than the size of the main bodies of text, I also increased the font weight of headings and subheadings to make them bolder and stand out more to users of the website. </p>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
             <h4 class="card-title">
               Colour Theory
             </h4>
-            <p class="card-text">At the start of the design process, I decided to create a blue colour scheme throughout my website. I chose this colour as research shows that the colour blue is perceived as aesthetically appealing and often associated with trust (Cyr et al, 2010). When I began to pull in my own images to my website it became clear that blue headings were hard to read against the photo I had chosen as my header photo. Therefore, I decided to include another colour simply for headings and use blue everywhere else. I wanted the colours to work well together, so I chose a colour which is opposite blue in the colour wheel, which is orange (Holtzschue, 2012). This is known as a complementary colour pair (Itten, 1970) and when used together they are meant to contrast and complement each other well.</p>
+            <p class="card-text">At the start of the web design process, I decided that I only wanted to use one colour consistently throughout my website. After doing some research and experimenting I decided that the colour I wanted to use was blue. I chose to use this colour because research shows that the colour blue is perceived as aesthetically appealing and often associated with trust (Cyr et al, 2010). I changed the colours on my website by changing the HEX codes that are embedded within the CSS file. When I began to pull in my own images to my website it became clear that blue headings were hard to read against the photo I had chosen to use as my header photo. Therefore, I decided to add another colour to the colour scheme, I wanted the colours to complement each other, so I chose the colour that is opposite blue in the colour wheel, which is orange (Holtzschue, 2012). This is known as a complementary colour pair (Itten, 1970) and when used together they are meant to contrast and complement each other well. Orange is also thought to represent enthusiasm and creativity which are both attributes I want to be reflected throughout my website (Beaird et al,2020).</p>
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
             <h4 class="card-title">
               Accessibility
             </h4>
-            <p class="card-text">Website accessibility ensures that websites are available for everyone of all different abilities to use and experience (Dudharejia,2020). A few ways in which websites can be made more accessible is by including alternative text, simplistic language, a good colour contrast and clear typography (Brophy and Craven, 2007). Alternative text is used within HTML to describe an image, this benefits people who are visual impaired, but it could also benefit those who may be in a situation where images on a website won’t load. In order to ensure the language used on my website was easy to read and understand, I used the website Hemmingway Editor to improve the readability of my text (See the supporting evidence section below). Whilst creating my website I observed that the blue headings were hard to read against the header image I chose to use, therefore I needed to find an alternative colour to use as it is important to have a good colour contrast. This is beneficial for those who may have limited vision but also those who may be looking at the website outside or in direct sunlight. Finally, typography also plays a part in making a website accessible because it is important that any text is easily legible to users. I chose to just include one font because having to many fonts on one website can make it much harder to read and understand, which hinders the experience that users will have on the website.   </p>
+            <p class="card-text">Website accessibility ensures that websites are available for everyone of all different abilities to use and experience (Dudharejia,2020). A few ways in which websites can be made more accessible is by including alternative text, simplistic language, a good colour contrast and clear typography (Brophy and Craven, 2007). Alternative text is used within HTML to describe an image, this benefits people who are visual impaired, but it could also benefit those who may be in a situation where images on a website won’t load. In order to ensure the language used on my website was easy to read and understand, I used the website Hemmingway Editor to improve the readability of my text (See the supporting evidence section). Whilst creating my website I observed that the blue headings were hard to read against the header image I chose to use, therefore I needed to find an alternative colour to use as it is important to have a good colour contrast. This is beneficial for those who may have limited vision but also those who may be looking at the website outside or in direct sunlight. Finally, typography also plays a part in making a website accessible because it is important that any text is easily legible to users.  </p>
           </div>
         </div>
       </div>
@@ -121,6 +121,7 @@
               Reference List
             </h4>
             <p class="card-text">Arhipova, A., (2017). 8 Typography Tips For Designers: How to Make Fonts Speak. [online] Tubik Blog: Articles About Design. Available at: <https://blog.tubikstudio.com/8-typography-tips-for-designers-how-to-make-fonts-speak/> [Accessed 11 April 2021].</p>
+            <p class="card-text">Beaird, Jason, Walker, Alex & George, James, (2020). The Principles of Beautiful Web Design, Sebastopol: SitePoint Pty, Limited</p>
             <p class="card-text">Brophy, P. and Craven, J., (2007). Web accessibility. Library trends, 55(4), pp.950-972.</p>
             <p class="card-text">Cyr, D., Head, M. and Larios, H., (2010). Colour appeal in website design within and across cultures: A multi-method evaluation. International journal of human-computer studies, 68(1-2), pp.1-21.</p>
             <p class="card-text">Dudharejia, M., (2020). How to Incorporate Accessibility in Your Website. [online] Search Engine Journal. Available at: <https://www.searchenginejournal.com/make-website-more-accessible/347450/#close> [Accessed 10 April 2021].</p>
@@ -168,11 +169,11 @@
   </div>
 
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="carousel-control-prev-icon carousel-colour" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="carousel-control-next-icon carousel-colour" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
 </div>
